# fastApiProject

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  send_post_request.sh  test_main.http
src/: contracts.py  database.py  entities.py  main.py  shopping_cart.py  user.py
src/grpc_example/: client.py  server.py
src/grpc_example/definitions/: service.proto
src/grpc_example/definitions/builds/: service_pb2.py  service_pb2_grpc.py
tests/: test_database.py  test_shopping_cart.py
tests/grpc_example/: test_server.py
