[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Nikita Denisov <nikita160412@yandex.ru>"]
readme = "README.md"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
